tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/string/basic-out-of-range-unicode-escape-2.stderr
TOML parse error at line 1, column 8
  |
1 | a = "\U00D80000"
  |        ^
invalid unicode 8-digit hex code
value is out of range
